# app/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
+        "description": "This is a newsletter subscription API service.",
         "title": "STRV Newsletter Subscription API",
         "contact": {
             "name": "Nguyen Thanh Lam",
@@ -15,98 +15,14 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api/v1",
     "paths": {
-        "/login": {
+        "/subscription/create": {
             "post": {
-                "description": "Logs in a user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "User Login",
-                "operationId": "login",
-                "parameters": [
+                "security": [
                     {
-                        "description": "login credentials",
-                        "name": "authInput",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.AuthenticationInput"
-                        }
+                        "Bearer": []
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "token",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "message",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/register": {
-            "post": {
-                "description": "Registers a new user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "User Registration",
-                "operationId": "register",
-                "parameters": [
-                    {
-                        "description": "registration details",
-                        "name": "authInput",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.AuthenticationInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "token",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "message",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/subscription": {
-            "post": {
                 "description": "Create a new subscription with the given name and description",
                 "consumes": [
                     "application/json"
@@ -145,6 +61,11 @@
         },
         "/subscription/{subscriptionID}/send": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Send a newsletter to all subscribers",
                 "consumes": [
                     "application/json"
@@ -216,13 +137,13 @@
                     "200": {
                         "description": "Message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/api.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Error message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/api.MessageResponse"
                         }
                     }
                 }
@@ -256,13 +177,89 @@
                     "200": {
                         "description": "Message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/api.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Error message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/api.MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/login": {
+            "post": {
+                "description": "Logs in a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "User Login",
+                "operationId": "login",
+                "parameters": [
+                    {
+                        "description": "Login credentials",
+                        "name": "authInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthenticationInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Token",
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthenticationResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Message",
+                        "schema": {
+                            "$ref": "#/definitions/api.MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/register": {
+            "post": {
+                "description": "Registers a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "User Registration",
+                "operationId": "register",
+                "parameters": [
+                    {
+                        "description": "Registration details",
+                        "name": "authInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthenticationInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Token",
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthenticationResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Message",
+                        "schema": {
+                            "$ref": "#/definitions/api.MessageResponse"
                         }
                     }
                 }
@@ -281,6 +278,14 @@
                 }
             }
         },
+        "api.AuthenticationResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "api.CreateSubscriptionInput": {
             "type": "object",
             "properties": {
@@ -288,6 +293,14 @@
                     "type": "string"
                 },
                 "subscriptionName": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -305,8 +318,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     },
     "externalDocs": {
